Add NaiveBayesClassifier structure and define protocols

--- a/TP3 - 01 Description.ipynb
+++ b/TP3 - 01 Description.ipynb
@@ -1560,6 +1560,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Steps to follow to implement the Naive Bayes\n",
+    "\n",
+    "1. calculate probabilities $P(c_i)$ for each output class - Course 3 `count_values()`\n",
+    "2. calcluate conditional probabilities $P(x_j \\, | \\, c_i)$ for each output class  \n",
+    " 2.1 for all **discrecte attributes** pseudo-counts - Course 3 `crosstab`  \n",
+    " 2.2 for all **continous attributes** conditoinal mean/variance and normal probability distribution - Course 3 'groupby` processing, HW1  \n",
+    "3. use for-loop to calculate the product $\\prod_{j=1}^d P(x_j \\, | \\, c_i)$\n",
+    "4. Use the simplified form $P(c_i \\, | \\, \\mathbf{x}) \\propto P(\\mathbf{x} \\, | \\, c_i) P(c_i)$\n",
+    "5. Use Bayes decision rule $\\ \\hat{y} = argmax_{c_i} \\, P(c_i \\, | \\, \\mathbf{x}) $ to predict the class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import ClassifierMixin\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "class NaiveBayesClassifier(ClassifierMixin):\n",
+    "    \"\"\"Naive Bayes Classifier\n",
+    "    \n",
+    "    The Naive Bayes Classifier technique is based on the so-called \n",
+    "    Bayesian theorem and is particularly suited when the dimensionality \n",
+    "    of the inputs is high. Despite its simplicity, Naive Bayes can often \n",
+    "    outperform more sophisticated classification methods.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def fit(self, X, y, sample_weight=None):\n",
+    "        \"\"\"Fit Gaussian Naive Bayes according to X, y\n",
+    "        \n",
+    "            1. calculate probabilities  P(ci) for each output class\n",
+    "            2. calcluate conditional probabilities  P(xj|ci) for each output class\n",
+    "                2.1 for all discrecte attributes pseudo-counts\n",
+    "                2.2 for all continous attributes conditoinal mean/variance and normal probability distribution\n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "    \n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        \"\"\"Perform classification on an array of test vectors X.\n",
+    "            1. Use the simplified form  P(ci|x)∝P(x|ci)P(ci)\n",
+    "            2. Use Bayes decision rule   ŷ =argmaxciP(ci|x)to predict the class. \n",
+    "        \"\"\"\n",
+    "        jll = 0 # jll is the joint log likelyhood and is calculated in the step 1.\n",
+    "        return np.argmax(jll, axis=1) # argmax is computed and is the step 2.\n",
+    "    \n",
+    "    \n",
+    "    def _joint_log_likelihood(self, X):\n",
+    "        \"\"\"\n",
+    "            1. use for-loop to calculate the product  ∏dj=1P(xj|ci)\n",
+    "        \"\"\"\n",
+    "        joint_log_likelihood = []\n",
+    "\n",
+    "        # for-loop goes here\n",
+    "        \n",
+    "        joint_log_likelihood = np.array(joint_log_likelihood).T\n",
+    "        return joint_log_likelihood\n",
+    "    \n",
+    "    \n",
+    "    def predict_log_proba(self, X):\n",
+    "        \"\"\"Return log-probability estimates for the test vector X.\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    \n",
+    "    def predict_proba(self, X):\n",
+    "        \"\"\"Return probability estimates for the test vector X.\"\"\"\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<font color=red>**Note:** The Naive Bayes classifier has no hyper-parameters to be selected, therefore you do not need to perform the inner cross-validation.  \n",
     "In this respect the NB classifier is easy.  \n",
     "You only need to do the train/test split and perform the train and prediction steps described above.</font>\n",
