Add Naive Bayes fit function

--- a/TP3 - 01 Description.ipynb
+++ b/TP3 - 01 Description.ipynb
@@ -1560,25 +1560,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Steps to follow to implement the Naive Bayes\n",
-    "\n",
-    "1. calculate probabilities $P(c_i)$ for each output class - Course 3 `count_values()`\n",
-    "2. calcluate conditional probabilities $P(x_j \\, | \\, c_i)$ for each output class  \n",
-    " 2.1 for all **discrecte attributes** pseudo-counts - Course 3 `crosstab`  \n",
-    " 2.2 for all **continous attributes** conditoinal mean/variance and normal probability distribution - Course 3 'groupby` processing, HW1  \n",
-    "3. use for-loop to calculate the product $\\prod_{j=1}^d P(x_j \\, | \\, c_i)$\n",
-    "4. Use the simplified form $P(c_i \\, | \\, \\mathbf{x}) \\propto P(\\mathbf{x} \\, | \\, c_i) P(c_i)$\n",
-    "5. Use Bayes decision rule $\\ \\hat{y} = argmax_{c_i} \\, P(c_i \\, | \\, \\mathbf{x}) $ to predict the class."
+    "## <font color=red>**IMPORTANT NOTE**\n",
+    "Our FIT function seems to be working, however it's not the case for the PREDICT function. \n",
+    "In order to keep going further in our TP we choose to use the Naive Bayes \n",
+    "implementation of the sklearn library (GaussianNB). We used it mainly in the model comparison exercises. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.base import ClassifierMixin\n",
     "import numpy as np\n",
+    "from sklearn.base import ClassifierMixin\n",
+    "from scipy.stats import norm\n",
+    "import math\n",
     "\n",
     "\n",
     "class NaiveBayesClassifier(ClassifierMixin):\n",
@@ -1590,6 +1587,9 @@
     "    outperform more sophisticated classification methods.\n",
     "    \"\"\"\n",
     "    \n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
     "    def fit(self, X, y, sample_weight=None):\n",
     "        \"\"\"Fit Gaussian Naive Bayes according to X, y\n",
     "        \n",
@@ -1598,38 +1598,99 @@
     "                2.1 for all discrecte attributes pseudo-counts\n",
     "                2.2 for all continous attributes conditoinal mean/variance and normal probability distribution\n",
     "        \"\"\"\n",
-    "        pass\n",
+    "        self._in_train = X\n",
+    "        self._out_train = y\n",
+    "        self._out_class_prob(self._out_train)\n",
+    "        self._discrete_conditional_prob(self._in_train, self._out_train, self._nb_true)\n",
+    "        self._continous_conditional_prob(self._in_train, self._out_train)\n",
+    "        print(\"1. PROBABILITY FOR EACH OUTPUT CLASS\")\n",
+    "        display(self._output_class_probs)\n",
+    "        print()\n",
+    "        print(\"2.1 CONDITIONAL PROBA FOR DISCRETE ATTRIBUTES\")\n",
+    "        display(self._descrete_conditional_probs)\n",
+    "        print()\n",
+    "        print(\"2.2 CONDITIONAL PROBAL FOR CONTINUOUS ATTRIBUTES\")\n",
+    "        display(self._continous_conditional_probs)\n",
+    "        \n",
     "    \n",
+    "    # 1. PROBABILITY FOR EACH OUTPUT CLASS\n",
+    "    def _out_class_prob(self, out_train):\n",
+    "        class_counts = out_train.value_counts()\n",
+    "        nbTrue = class_counts[1]\n",
+    "        self._nb_true = nbTrue\n",
+    "        nbFalse = class_counts[0]\n",
+    "        # which class has the highest count\n",
+    "        prob_true = nbTrue  / len(out_train)\n",
+    "        prob_false = nbFalse  / len(out_train)\n",
+    "        self._output_class_probs = (prob_true, prob_false)\n",
+    "\n",
+    "    # 2.1 DISCRETE ATTRIBUTES\n",
+    "    def _discrete_conditional_prob(self, in_train, out_train, nbTrue):\n",
+    "        in_df = in_train.iloc[:,4:]\n",
+    "        probs_true = []\n",
+    "        probs_false = []\n",
+    "        nb_columns = in_df.shape[0]\n",
+    "        nb_raws = in_df.shape[1]\n",
+    "        for row_i in range(nb_raws):\n",
+    "            count_true = 0\n",
+    "            count_false = 0\n",
+    "            for column_i in range(nb_columns):\n",
+    "                x = in_df.iloc[column_i, row_i]\n",
+    "                c = out_train.iloc[column_i]\n",
+    "                if(x == 1 and c == True):\n",
+    "                    count_true += 1\n",
+    "                elif(x == 0 and c == False):\n",
+    "                    count_false += 1\n",
+    "            prob_true = (count_true + 1) / (nbTrue + 2)\n",
+    "            prob_false = (count_false + 1) / (len(out_train) - nbTrue + 2)\n",
+    "            probs_true.append(prob_true)\n",
+    "            probs_false.append(prob_false)\n",
+    "        self._descrete_conditional_probs = (probs_true, probs_true)\n",
+    "\n",
+    "    # 2.2 CONTINUOUS ATTRIBUTES\n",
+    "    def _continous_conditional_prob(self, in_train, out_train):\n",
+    "        in_df = in_train.iloc[:,4:]\n",
+    "        con_df = in_train.iloc[:,:4]\n",
+    "        con_df.insert(4, 'fast_sale', out_train)\n",
+    "        lst = con_df.columns.values.tolist()\n",
+    "        probs_true = []\n",
+    "        probs_false = []\n",
+    "        for i in range(len(lst)-1):\n",
+    "            mean = con_df.groupby('fast_sale')[lst[i]].mean()\n",
+    "            var = con_df.groupby('fast_sale')[lst[i]].var()\n",
+    "            std = con_df.groupby('fast_sale')[lst[i]].std()\n",
+    "            \"\"\"\n",
+    "            We used the pdf method from scipy for the sake of simplicity and robustness\n",
+    "            but we could have implemented it ourselvs like this:\n",
+    "\n",
+    "            def normpdf(mean, var, x=1):\n",
+    "                denom = (2*np.pi*var)**0.5\n",
+    "                num = math.exp(-(float(x)-float(mean))**2/(2*var))  \n",
+    "                return num/denom\n",
+    "\n",
+    "            \"\"\"\n",
+    "            prob_true = norm.pdf(1, loc=mean[1], scale=std[1])\n",
+    "            prob_false = norm.pdf(1, loc=mean[0], scale=std[0])\n",
+    "            probs_true.append(prob_true)\n",
+    "            probs_false.append(prob_false)\n",
+    "        self._continous_conditional_probs = (probs_true, probs_false)\n",
     "    \n",
     "    def predict(self, X):\n",
     "        \"\"\"Perform classification on an array of test vectors X.\n",
     "            1. Use the simplified form  P(ci|x)∝P(x|ci)P(ci)\n",
     "            2. Use Bayes decision rule   ŷ =argmaxciP(ci|x)to predict the class. \n",
+    "            \n",
+    "            Params\n",
+    "            X is the in_test\n",
+    "            \n",
+    "            Returns\n",
+    "            array of predicted target_variable based on input_data(X) \n",
+    "            ==> this will be matched with the out_test (real results). The delta will be the test accuracy.\n",
     "        \"\"\"\n",
-    "        jll = 0 # jll is the joint log likelyhood and is calculated in the step 1.\n",
-    "        return np.argmax(jll, axis=1) # argmax is computed and is the step 2.\n",
-    "    \n",
-    "    \n",
-    "    def _joint_log_likelihood(self, X):\n",
-    "        \"\"\"\n",
-    "            1. use for-loop to calculate the product  ∏dj=1P(xj|ci)\n",
-    "        \"\"\"\n",
-    "        joint_log_likelihood = []\n",
-    "\n",
-    "        # for-loop goes here\n",
-    "        \n",
-    "        joint_log_likelihood = np.array(joint_log_likelihood).T\n",
-    "        return joint_log_likelihood\n",
-    "    \n",
-    "    \n",
-    "    def predict_log_proba(self, X):\n",
-    "        \"\"\"Return log-probability estimates for the test vector X.\"\"\"\n",
-    "        pass\n",
-    "\n",
-    "    \n",
-    "    def predict_proba(self, X):\n",
-    "        \"\"\"Return probability estimates for the test vector X.\"\"\"\n",
-    "        pass"
+    "        full_probs_true = self._continous_conditional_probs[0] + self._descrete_conditional_probs[0]\n",
+    "        full_probs_false = self._continous_conditional_probs[1] + self._descrete_conditional_probs[1]\n",
+    "        full_probs = [full_probs_true, full_probs_false]\n",
+    "        return X[np.argmax(full_probs, axis=0)]"
    ]
   },
   {
@@ -1645,7 +1706,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. PROBABILITY FOR EACH OUTPUT CLASS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.5149994718495827, 0.4850005281504172)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2.1 CONDITIONAL PROBA FOR DISCRETE ATTRIBUTES\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([0.13195939710858198,\n",
+       "  0.007689941556444171,\n",
+       "  0.1413923920844868,\n",
+       "  0.06336511842509997,\n",
+       "  0.020814108479442223,\n",
+       "  0.37352609453501484,\n",
+       "  0.2258792166512868,\n",
+       "  0.1486722034245873,\n",
+       "  0.019276120168153388,\n",
+       "  0.08069312006562084,\n",
+       "  0.9193068799343792,\n",
+       "  0.019788782938583,\n",
+       "  0.08971598482518199,\n",
+       "  0.03803957756587716,\n",
+       "  0.009535527529990772,\n",
+       "  0.002153183635804368,\n",
+       "  0.0800779247411053,\n",
+       "  0.00030759766225776686,\n",
+       "  0.015072285450630576,\n",
+       "  0.006972213677842715,\n",
+       "  0.007689941556444171,\n",
+       "  0.00851020198913155,\n",
+       "  0.0070747462319286376,\n",
+       "  0.00943299497590485,\n",
+       "  0.010663385624935916,\n",
+       "  0.0012303906490310674,\n",
+       "  0.05321439557059366,\n",
+       "  0.010663385624935916,\n",
+       "  0.00810007177278786,\n",
+       "  0.037937045011791244,\n",
+       "  0.09361222188044704,\n",
+       "  0.10519840049215626,\n",
+       "  0.005946888136983492,\n",
+       "  0.02019891315492669,\n",
+       "  0.04029529375576746,\n",
+       "  0.01527735055880242,\n",
+       "  0.006869681123756793,\n",
+       "  0.021941966574387368,\n",
+       "  0.04634471444683687,\n",
+       "  0.005024095150210192,\n",
+       "  0.0602891418025223,\n",
+       "  0.0035886393930072797,\n",
+       "  0.038552240336306776,\n",
+       "  0.001127858094945145,\n",
+       "  0.003998769609350969,\n",
+       "  0.007382343894186404,\n",
+       "  0.023479954885676203,\n",
+       "  0.005229160258382036,\n",
+       "  0.01035578796267815,\n",
+       "  0.06890187634573977,\n",
+       "  0.004101302163436891,\n",
+       "  0.00020506510817184457,\n",
+       "  0.7084999487337229,\n",
+       "  0.0006151953245155337,\n",
+       "  0.2802214703168256,\n",
+       "  0.0005126627704296114,\n",
+       "  0.00010253255408592229,\n",
+       "  0.01035578796267815,\n",
+       "  0.07966779452476161,\n",
+       "  0.3933148774735979,\n",
+       "  0.17522813493284117,\n",
+       "  0.25879216651286785,\n",
+       "  0.09330462421818927],\n",
+       " [0.13195939710858198,\n",
+       "  0.007689941556444171,\n",
+       "  0.1413923920844868,\n",
+       "  0.06336511842509997,\n",
+       "  0.020814108479442223,\n",
+       "  0.37352609453501484,\n",
+       "  0.2258792166512868,\n",
+       "  0.1486722034245873,\n",
+       "  0.019276120168153388,\n",
+       "  0.08069312006562084,\n",
+       "  0.9193068799343792,\n",
+       "  0.019788782938583,\n",
+       "  0.08971598482518199,\n",
+       "  0.03803957756587716,\n",
+       "  0.009535527529990772,\n",
+       "  0.002153183635804368,\n",
+       "  0.0800779247411053,\n",
+       "  0.00030759766225776686,\n",
+       "  0.015072285450630576,\n",
+       "  0.006972213677842715,\n",
+       "  0.007689941556444171,\n",
+       "  0.00851020198913155,\n",
+       "  0.0070747462319286376,\n",
+       "  0.00943299497590485,\n",
+       "  0.010663385624935916,\n",
+       "  0.0012303906490310674,\n",
+       "  0.05321439557059366,\n",
+       "  0.010663385624935916,\n",
+       "  0.00810007177278786,\n",
+       "  0.037937045011791244,\n",
+       "  0.09361222188044704,\n",
+       "  0.10519840049215626,\n",
+       "  0.005946888136983492,\n",
+       "  0.02019891315492669,\n",
+       "  0.04029529375576746,\n",
+       "  0.01527735055880242,\n",
+       "  0.006869681123756793,\n",
+       "  0.021941966574387368,\n",
+       "  0.04634471444683687,\n",
+       "  0.005024095150210192,\n",
+       "  0.0602891418025223,\n",
+       "  0.0035886393930072797,\n",
+       "  0.038552240336306776,\n",
+       "  0.001127858094945145,\n",
+       "  0.003998769609350969,\n",
+       "  0.007382343894186404,\n",
+       "  0.023479954885676203,\n",
+       "  0.005229160258382036,\n",
+       "  0.01035578796267815,\n",
+       "  0.06890187634573977,\n",
+       "  0.004101302163436891,\n",
+       "  0.00020506510817184457,\n",
+       "  0.7084999487337229,\n",
+       "  0.0006151953245155337,\n",
+       "  0.2802214703168256,\n",
+       "  0.0005126627704296114,\n",
+       "  0.00010253255408592229,\n",
+       "  0.01035578796267815,\n",
+       "  0.07966779452476161,\n",
+       "  0.3933148774735979,\n",
+       "  0.17522813493284117,\n",
+       "  0.25879216651286785,\n",
+       "  0.09330462421818927])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2.2 CONDITIONAL PROBAL FOR CONTINUOUS ATTRIBUTES\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([3.493118041834414e-63,\n",
+       "  0.4432425661700904,\n",
+       "  4.021256345534037e-102,\n",
+       "  1.2359848070425405],\n",
+       " [2.2072972538184753e-39,\n",
+       "  1.0798641447703419,\n",
+       "  2.5396083523067317e-91,\n",
+       "  1.037234658055471])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nb_clf_samy = NaiveBayesClassifier()\n",
+    "nb_clf_samy.fit(in_train, out_train)\n",
+    "\n",
+    "# x = nb_clf_samy.predict(in_test) \n",
+    "# predict function not working as in our IMPORTANT NOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1727,9 +1986,9 @@
        " 0.001: 0.5394087450937013,\n",
        " 0.01: 0.552938365968489,\n",
        " 0.1: 0.5616176397364421,\n",
-       " 1: 0.5683603050110088,\n",
-       " 10: 0.5702264750827106,\n",
-       " 100: 0.5706137788830021}"
+       " 1: 0.5683515041309207,\n",
+       " 10: 0.5702088709985631,\n",
+       " 100: 0.5706049768409284}"
       ]
      },
      "metadata": {},
@@ -1761,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1772,11 +2031,11 @@
       "---------------------------------\n",
       "Test accuracy 0.5645132899137476\n",
       "Test accuracy 0.571830985915493\n",
-      "Test accuracy 0.5866197183098592\n",
+      "Test accuracy 0.5867957746478873\n",
       "Test accuracy 0.577112676056338\n",
       "Test accuracy 0.5653169014084507\n",
       "\n",
-      "The test average accuracy is 0.5730787143207776\n"
+      "The test average accuracy is 0.5731139255883833\n"
      ]
     }
    ],
@@ -1807,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +2077,7 @@
       "P(0.5191531221699747 <= 0.5321294976335746 <= 0.5451058730971746) = 0.95\n",
       "\n",
       "Logistic regression\n",
-      "P(0.560215101887784 <= 0.5730787143207776 <= 0.5859423267537712) = 0.95\n",
+      "P(0.5602504484811006 <= 0.5731139255883833 <= 0.5859774026956659) = 0.95\n",
       "\n",
       "Default classifier\n",
       "P(0.5027598322873742 <= 0.5157566238834167 <= 0.5287534154794592) = 0.95\n",
@@ -1868,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
